--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "csv-parse": "4.16.3",
     "express": "4.17.1",
     "express-graphql": "0.12.0",
-    "graphql": "15.6.1"
+    "graphql": "15.6.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
